--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
     <script defer src="assets/js/index.js"></script>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#" class="logo"><img src="assets/img/logo_apple.svg" alt="logo da Apple"></a></li>
+                <li><a href="#">Loja</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">Só na na Apple</a></li>
+                <li><a href="#">Acessórios</a></li>
+                <li><a href="#">Suporte</a></li>
+            </ul>
+        </nav>
+        <div class="navbar-second">
+            <div class="second-title">
+                <h2>iPhone 13 Pro</h2>
+            </div>
+            <div class="second-links">
+                <a href="#">Visão Geral</a>
+                <a href="#">Mudar para o iPhone</a>
+                <a href="#">Especificações</a>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="ribbon">
+            <p>Pague seu iPhone em até 12 parcelas ou economize 10% nos pagamentos á vista. <span>Saiba mais</span></p>
+        </div>
+        <section class="hero">
+            <h2>iPhone 13 Pro</h2>
+            <h1>É todo Pro.</h1>
+            <p>
+                O iPhone 13 Pro é uma enorme evolução. Ele
+                traz uma rapidez absurda a tudo o que você faz
+                e vem com novos recursos espetaculares para
+                fotos e vídeos. Tudo em dois tamanhos.
+            </p>
+
+            <p>A partir de R$ 9.499</p>
+
+            <a href="#" class="btn">Comprar</a>
+
+            <img src="assets/img/iphone_silver.jpg" alt="iPhone">
+            <div class="color">
+                <a href="#" class="green selected"></a>
+                <a href="#" class="green selected"></a>
+                <a href="#" class="green selected"></a>
+                <a href="#" class="green selected"></a>
+                <a href="#" class="green selected"></a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
