modificações na div color

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
             <img src="assets/img/iphone_silver.jpg" alt="iPhone">
             <div class="color">
-                <a href="#" class="green selected"></a>
-                <a href="#" class="green selected"></a>
-                <a href="#" class="green selected"></a>
-                <a href="#" class="green selected"></a>
-                <a href="#" class="green selected"></a>
+                <a href="#" class="silver selected"></a>
+                <a href="#" class="golden"></a>
+                <a href="#" class="green"></a>
+                <a href="#" class="grafite"></a>
+                <a href="#" class="blue"></a>
             </div>
         </section>
     </main>
