--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
             </ul>
         </nav>
         <div class="navbar-second">
-            <div class="second-title">
-                <h2>iPhone 13 Pro</h2>
-            </div>
-            <div class="second-links">
-                <a href="#">Visão Geral</a>
-                <a href="#">Mudar para o iPhone</a>
-                <a href="#">Especificações</a>
-                <a href="#" class="btn">Comprar</a>
+            <div class="second-container">
+                <div class="second-title">
+                    <h2>iPhone 13 Pro</h2>
+                </div>
+                <div class="second-links">
+                    <a href="#">Visão Geral</a>
+                    <a href="#">Mudar para o iPhone</a>
+                    <a href="#">Especificações</a>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
             </div>
         </div>
     </header>
     <main>
         <div class="ribbon">
-            <p>Pague seu iPhone em até 12 parcelas ou economize 10% nos pagamentos á vista. <span>Saiba mais</span></p>
+            <p>Pague seu iPhone em até 12 parcelas ou economize 10% nos pagamentos á vista. <a href="#">Saiba mais</a></p>
         </div>
         <section class="hero">
             <h2>iPhone 13 Pro</h2>
@@ -49,7 +51,7 @@
                 fotos e vídeos. Tudo em dois tamanhos.
             </p>
 
-            <p>A partir de R$ 9.499</p>
+            <p class="price">A partir de R$ 9.499</p>
 
             <a href="#" class="btn">Comprar</a>
 
