add de responsividade

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <div class="second-title">
                     <h2>iPhone 13 Pro</h2>
                 </div>
-                <div class="second-links">
+                <ul class="second-links">
                     <a href="#">Visão Geral</a>
                     <a href="#">Mudar para o iPhone</a>
                     <a href="#">Especificações</a>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
+                    <span href="#" class="btn">Comprar</span>
+                </ul>
             </div>
         </div>
     </header>
@@ -55,7 +55,7 @@
 
             <a href="#" class="btn">Comprar</a>
 
-            <img src="assets/img/iphone_silver.jpg" alt="iPhone">
+            <div class="phone"><img  src="assets/img/iphone_silver.jpg" alt="iPhone"></div>
             <div class="color">
                 <a href="#" class="silver selected"></a>
                 <a href="#" class="golden"></a>
