add função pata trocar imagens

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
             <a href="#" class="btn">Comprar</a>
 
-            <div class="phone"><img  src="assets/img/iphone_silver.jpg" alt="iPhone"></div>
+            <div class="phone"><img class="img-phone"  src="assets/img/iphone_silver.jpg" alt="iPhone"></div>
             <div class="color">
-                <a href="#" class="silver selected"></a>
-                <a href="#" class="golden"></a>
-                <a href="#" class="green"></a>
-                <a href="#" class="grafite"></a>
-                <a href="#" class="blue"></a>
+                <a href="#" id="silver" class="btn-color silver selected"></a>
+                <a href="#" id="golden" class="btn-color golden"></a>
+                <a href="#" id="green" class="btn-color green"></a>
+                <a href="#" id="grafite" class="btn-color grafite"></a>
+                <a href="#" id="blue" class="btn-color blue"></a>
             </div>
         </section>
     </main>
